--- a/index.css
+++ b/index.css
@@ -41,3 +41,23 @@ body {
     color: #ffffff;
     border-radius: 32px;
 }
+
+.tips {
+    background: #86B81B20;
+    border: 1px solid #86B81B;
+    width: 40%;
+    margin: 20px auto;
+    border-radius: 4px;
+    padding: 20px;
+    margin-top: 30px;
+}
+
+.tips a {
+    text-decoration: none;
+    color: #86B81B;
+}
+
+.tips .img-wrapper {
+    text-align: center;
+    margin-bottom: 10px;
+}
