--- a/index.css
+++ b/index.css
@@ -61,3 +61,9 @@ body {
     text-align: center;
     margin-bottom: 10px;
 }
+
+@media only screen and (max-width: 500px) {
+    .tips {
+        width: 80%;
+    }
+}
